Remove fixed width from title on mobile

--- a/components/Hero/Hero.module.css
+++ b/components/Hero/Hero.module.css
@@ -22,7 +22,6 @@
 
 .title {
   font: var(--display-lg-semibold);
-  width: 329px;
   color: var(--white);
   margin-bottom: 24px;
 }
